# dora-ai

./: .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml
backend/: async_bridge.py  cli.py  config.py  conversation.py  utils.py
backend/db/: database.py
backend/db/migrations/: 001_initial.sql  002_add_souls.sql
backend/providers/: base.py  ollama.py  router.py
backend/soul/: definition.py  emotion_classifier.py  sentiment.py  state.py  tag_parser.py
docs/: architecture.md  database.md  soul-engine.md
souls/: default.yaml
tests/: conftest.py  test_async_bridge.py  test_conversation.py  test_database.py  test_emotion_classifier.py  test_ollama.py  test_sentiment.py  test_soul_definition.py  test_soul_migration.py  test_soul_state.py  test_tag_parser.py
